Indicating list only access on collection browse page, with a larger lock icon.  Adjusted color of base text and anchors to make links in public and admin more visible and be closer to the front page.  Fixed syntax of request access links.

--- a/access/src/main/external/static/css/admin/cdradmin.css
+++ b/access/src/main/external/static/css/admin/cdradmin.css
@@ -16,6 +16,10 @@ html {
 	width: calc(100% - 250px);
 }
 
+h1 {
+	color: #666677;
+}
+
 /** Search form */
 .search_inputwrap {
   background-color: #FFFFFF;
