--- a/access/src/main/external/static/css/cdr_admin.css
+++ b/access/src/main/external/static/css/cdr_admin.css
@@ -49,7 +49,7 @@ table {
 	text-align: center;
 	font-family: verdana, sans-serif;
 	background-color: #ececec;
-	color: #666;
+	color: #222;
 	font-size: 12px;
 	line-height: 17px;
 }
@@ -180,12 +180,12 @@ table {
 /** Typography */
 
 a {
-	color: #555;
+	color: #1A698C;
 	text-decoration: none;
 }
 
 a:hover {
-	color: #e98d60;
+	color: #2193AF;
 	text-decoration: underline;
 }
 
@@ -2166,6 +2166,10 @@ body .ui-tooltip {
 	width: calc(100% - 250px);
 }
 
+h1 {
+	color: #666677;
+}
+
 /** Search form */
 .search_inputwrap {
   background-color: #FFFFFF;
@@ -2827,8 +2831,13 @@ body .ui-tooltip {
 	}
 }*/
 
+.searchitem_container_count {
+	color: #444;
+}
+
 .itemdetails > div > .status {
 	font-size: 0.7em;
+	color: #444;
 }
 
 .res_entry > .creator > div {
