--- a/access/src/main/external/static/css/cdrui_styles.css
+++ b/access/src/main/external/static/css/cdrui_styles.css
@@ -45,6 +45,7 @@ div#username_wrap {
 }
 
 .browseitem,.searchitem {
+	color: #555;
 	float: left;
 	width: 100%;
 }
@@ -85,6 +86,10 @@ div#username_wrap {
 }
 
 /** Thumbnail styles **/
+.thumb_container {
+	display: block;
+}
+
 .large.thumb_container {
 	position: relative;
 	width: 128px;
@@ -117,6 +122,11 @@ div#username_wrap {
 	right: -2px;
 }
 
+.large.thumb_container span {
+	bottom: -4px;
+	right: -7px;
+}
+
 .iteminfo {
 	width: 400px;
 	float: left;
@@ -128,12 +138,12 @@ div#username_wrap {
 }
 
 .searchitem_container_count {
-	color: #0A5274;
+	color: #676777;
 	white-space: nowrap;
 	font-size: 11px;
-    line-height: 14px;
-    margin-bottom: 4px;
-    width: 100%;
+	line-height: 14px;
+	margin-bottom: 4px;
+	width: 100%;
 }
 
 .collinfo {
@@ -253,14 +263,6 @@ h1 {
 
 .dark p,.darkest p {
 	color: #dfebf1;
-}
-
-.white a {
-	color: #555;
-}
-
-.white a:hover {
-	color: #e98d60;
 }
 
 .white h2 {
@@ -826,11 +828,7 @@ p.navigation_bar a {
 }
 
 .about_page a {
-	color: #0A5274;
-}
-
-.about_page a:hover {
-	color: #1d759f;
+	text-decoration: underline;
 }
 
 .about_page ul li {
